--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Starter Snowpack App" />
-<!--    <link rel="stylesheet" type="text/css" href="/public/index.css" />-->
-    <title>Starter Snowpack App</title>
+    <meta name="description" content="GoogleTasksApi App" />
+    <title>GoogleTasksApi App</title>
   </head>
   <body>
     <div id="root"></div>
