--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="GoogleTasksApi Top" />
-  <title>GoogleTasksApi Top</title>
+  <meta name="description" content="GoogleTasksApi App" />
+  <title>GoogleTasksApi App</title>
 </head>
 <body>
   <div id="root"></div>
